Sort servo instructions in the creative tab